Fixed font size on iPhone

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -52,17 +52,17 @@ blockquote, blockquote p {  font-size: $fs2; }
 @media only screen and (max-width: $breakpoint-1-max-width) {
 
 p {           
-    font-size: $fs5;
+    font-size: $fs4;
     line-height: $lhsmall;
 }
 
 .intro {      
-    font-size: $fs4; 
+    font-size: $fs3; 
     line-height: 1.4em;
 }
 
 .post ul li {
-    font-size: $fs5;
+    font-size: $fs4;
     line-height: $lhsmall;
     margin-bottom: $lhsmall/2;
 }
